--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
 </head>
 
 <body>
-
+  <header>
+    <div class="header">
+      <h1>Fun Bus</h1>
+      <nav class="nav">
+        <a href="#" alt="Home">Home</a>
+        <a href="#" alt="About Us">About Us</a>
+        <a href="#" alt="Blog">Blog</a>
+        <a href="#" alt="Contact">Contact</a>
+      </nav>
+    </div>
+  </header>
   
      
   <div class="container home">
