--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-  <header>
-    <div class="header">
+  <header class="header">
+    <div>
       <h1>Fun Bus</h1>
       <nav class="nav">
         <a href="#" alt="Home">Home</a>
