--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header class="header">
-    <div>
+    <div class="headerTOP">
       <h1>Fun Bus</h1>
       <nav class="nav">
         <a href="#" alt="Home">Home</a>
@@ -29,7 +29,11 @@
   
      
   <div class="container home">
-   
+      <div class="cta">
+        <img src="img/fun-bus.jpg" alt="A Fun Bus">
+        <h1>Welcome To Fun Bus!</h1>
+        <p class="text-content">Traveling expedition moder, clean webdesign blogger clean website theme website modern.  Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedtition.</p>
+      </div>
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
